# netz-midi-receiver

./: CMakeLists.txt  README.md  UnityMidiOut.cs
Source/: ConnectionStatusManager.h  CustomLookAndFeel.h  MIDIMessage.h  MessageReceiver.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
